Add couple of TODOs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -88,7 +88,7 @@
                 machine: machine
             })
         })
-            .then(console.log("sent!"))
+            .then(console.log("sent!")) // TODO: after sending the Poke, flash the message that the user has been notified
             .catch(err => console.error(err))
     }
 
