--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -11,6 +11,9 @@
             <label for="email" class="sr-only">Email: </label><input placeholder="Email" type="email" name="email" required><br />
             <label for="password" class="sr-only">Password: </label><input placeholder="Password" type="password" name="password" required>
             <button type="submit" class="btn btn-outline-success mx-2 btn-sm">Sign Up</button>
+            <% if (locals.msg) { %>
+                <span class="message"><%= locals.msg %></span>
+            <% } %>
         </form>
         <a href="/login">Already have an account? Log in.</a>
     </div>
