--- a/views/changepassword.ejs
+++ b/views/changepassword.ejs
@@ -7,7 +7,7 @@
     <%- include('./partials/nav', { home: '', login: '', signup: '', logged_in: true }) %> 
     <div class="container">
         <form action="/changepass" method="POST" class="form my-4">
-            <label for="email" class="sr-only">Email: </label><input placeholder="Email" type="email" name="email" value="<%= user_info.email %>" required><br />
+            <label for="email" class="sr-only">Email: </label><input placeholder="Email" type="email" name="email" value="<%= locals.user_info.email %>" required><br />
             <label for="oldpassword" class="sr-only">Old Password: </label><input placeholder="Old Password" type="password" name="password" required><br />
             <label for="newpassword" class="sr-only">New Password: </label><input placeholder="New Password" type="password" name="newpassword" required>
             <button type="submit" class="btn btn-outline-success mx-2 btn-sm">Change Password</button>
