Add flash message in changepassword route

--- a/views/changepassword.ejs
+++ b/views/changepassword.ejs
@@ -11,6 +11,9 @@
             <label for="oldpassword" class="sr-only">Old Password: </label><input placeholder="Old Password" type="password" name="password" required><br />
             <label for="newpassword" class="sr-only">New Password: </label><input placeholder="New Password" type="password" name="newpassword" required>
             <button type="submit" class="btn btn-outline-success mx-2 btn-sm">Change Password</button>
+            <% if (locals.msg) { %>
+                <span class="message"><%= locals.msg %></span>
+            <% } %>
         </form>
     </div>
     <%- include('./partials/bootstrap') %>
